--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,13 @@
   <head>
     <title>NEWSorcery</title>
     <meta name="description" content="Shmoll practice"/>
-    <link rel="apple-touch-icon" sizes="180x180" href=%PUBLIC_URL%/apple-touch-icon.png/>
-    <link rel="icon" type="image/png" sizes="32x32" href=%PUBLIC_URL%/favicon-32x32.png/>
-    <link rel="icon" type="image/png" sizes="16x16" href=%PUBLIC_URL%/favicon-16x16.png/>
-    <link rel="manifest" href=%PUBLIC_URL%/site.webmanifest"}/>
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+          integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+          crossorigin="anonymous">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png"/>
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest"/>
     <meta charset="utf-8" />
 
   </head>
